maint - added br element and padding to goodbye section in contact.html to stop maladjusted element pileup on tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,7 +480,7 @@ footer {
     }
 
     #goodbye {
-        padding-top: 200px;
+        padding-top: 250px;
         font-size: 1.5vw;
     }
 
